--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
-node_modules
+# Dependencies
+node_modules/
+client/node_modules/
+server/node_modules/
+
+# Env files
 .env
+client/.env
+server/.env
+
+# Logs
+*.log
+
+# Build outputs
+dist/
+build/
